# multithreading

./: CMakeLists.txt  README.md
inc/: threading.h
src/: main.cpp  threading.cpp
